# lm-detokenization

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: detokenization.ipynb  detokenization_tee.py  empirical.py  frequency.py  visualize.py
src/detokenization/: socres_and_counts.py  step1_save_scores.py  step2_mean_auroc.py
src/empirical/: __init__.py  six_terms_importance.py  utils.py  vs_tptpp.py
src/eqmodels/: __init__.py  gpt2.py  gpt2_test.py
src/eqmodels/utils/: hooks.py
src/utils/: ln.py  ln_test.py  mylogger.py  mytorchtyping.py  path.py
src/visualize/: __init__.py  l0_te.py  l0_tee.py  l0_tp.py  l0_tp_tpp.py  l0_tpp.py  l0_tpp_undertrained.py  subplots.py  var_wpe.py  var_wte.py
