[project]
name = "lm-detokenization"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "gokamoda", email = "gokamoda@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.1.0",
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
    "rich>=13.9.4",
    "torch==2.5.1",
    "seaborn>=0.13.2",
    "torchtyping>=0.1.5",
    "transformers>=4.46.2",
    "wordfreq>=3.1.1",
    "tiktoken>=0.8.0",
    "protobuf==3.20.3",
    "sentencepiece>=0.2.0",
    "scipy>=1.14.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
]


[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",  # Zip-without-explicit-strict
    "E501",  # Line too long, handled by black
    "F401",  # module imported but unused
    "F403",  # Unable to detect undefined names
    "N812",  # Lowercase imported as non-lowercase
    "N999",  # Invalid module name
    "UP035",  # Checks for uses of deprecated imports based on the minimum supported Python version.
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements in function
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true  # Settings for Python 3.8 compatibility

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
